--- a/project-6/package.json
+++ b/project-6/package.json
@@ -8,9 +8,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "pk <pkrasam@gmail.com> (https://ipfs.infura.io/ipfs/QmSXiR9Khm3yo1J67nUopvVBxFJ8YGN2fUGZ34Etr3m92x/)",
+  "author": "cfyang",
   "license": "MIT",
   "devDependencies": {
-    "lite-server": "2.4.0"
+    "lite-server": "^2.4.0",
+    "run-with-testrpc": "^0.3.0",
+    "truffle": "^5.0.12"
+  },
+  "dependencies": {
+    "dotenv": "^6.2.0",
+    "solc": "^0.4.24",
+    "truffle-hdwallet-provider": "^1.0.4"
   }
 }
